# qtheme_manager

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  build_debug.bat
resources/: resources.qrc
src/demo/: MainWindow.cpp  MainWindow.h  main.cpp
src/demo/pages/: ButtonsPage.cpp  ButtonsPage.h  ContainersPage.cpp  ContainersPage.h  FeedbackPage.cpp  FeedbackPage.h  InputsPage.cpp  InputsPage.h  NavigationPage.cpp  NavigationPage.h  ViewsPage.cpp  ViewsPage.h
src/theme/: ThemeManager.cpp  ThemeManager.h  ThemeRegistry.cpp  ThemeRegistry.h  qthemelib_global.h  qthemelib_resources.qrc
src/theme/themes/: blue_business.qss  dark_pro.qss  glass_futuristic.qss  green_eye.qss  high_contrast.qss  light_minimal.qss  soft_rounded.qss
